Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4, 11.5(EOL)
-
None
Description
storage/innobase/buf/buf0flu.cc
Missing { } brackets:
if (scanned) |
MONITOR_INC_VALUE_CUMULATIVE(MONITOR_LRU_BATCH_SCANNED,
|
MONITOR_LRU_BATCH_SCANNED_NUM_CALL,
|
MONITOR_LRU_BATCH_SCANNED_PER_CALL,
|
scanned);
|
MONITOR_INC_VALUE_CUMULATIVE is a multiline macro, so the second statement will be executed always, regardless of “if” condition:
#define MONITOR_INC_VALUE_CUMULATIVE( \
|
monitor, monitor_n_calls, monitor_per_call, value) \
|
MONITOR_CHECK_DEFINED(value); \
|
if (MONITOR_IS_ON(monitor)) { \ |
MONITOR_VALUE(monitor_n_calls)++; \
|
MONITOR_VALUE(monitor_per_call) = (mon_type_t) (value); \
|
if (MONITOR_VALUE(monitor_per_call) \ |
> MONITOR_MAX_VALUE(monitor_per_call)) { \
|
MONITOR_MAX_VALUE(monitor_per_call) = \
|
(mon_type_t) (value); \
|
} \
|
MONITOR_VALUE(monitor) += (mon_type_t) (value); \
|
if (MONITOR_VALUE(monitor) > MONITOR_MAX_VALUE(monitor)) { \ |
MONITOR_MAX_VALUE(monitor) = MONITOR_VALUE(monitor);\
|
} \
|
}
|
Attachments
Issue Links
- is caused by
-
MDEV-15053 Reduce buf_pool_t::mutex contention
-
- Closed
-