MDEV-33591 MONITOR_INC_VALUE_CUMULATIVE is executed regardless of "if" condition

MONITOR_INC_VALUE_CUMULATIVE is a multiline macro, so the second statement
will be executed always, regardless of "if" condition.

These problems first started with
commit b1ab211dee599eabd9a5b886fafa3adea29ae041 (MDEV-15053).

Thanks to Yury Chaikou from ServiceNow for the report.